# zerofetch

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  PKGBUILD  PUBLISH.md  README.md  config.conf  install.sh  zerofetch  zerofetch.1  zerofetch.conf  zerofetch.spec
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  rules
examples/: config.jsonc  config.toml  config.yaml
scripts/: build.sh  install.sh
src/: cli.rs  config.rs  display.rs  main.rs  utils.rs
src/logo/: ascii.rs  mod.rs
src/modules/: battery.rs  cpu.rs  de.rs  disk.rs  distro.rs  gpu.rs  host.rs  kernel.rs  memory.rs  mod.rs  network.rs  os.rs  packages.rs  shell.rs  terminal.rs  uptime.rs  wm.rs
